--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="tran">#00F44336</color>
     <color name="lighOrange">#FFC36A</color>
     <color name="lighGray">#B3B3B3</color>
+    <color name="transparentDark">#9B000000</color>
 </resources>
