--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginRegister">
-    <RelativeLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -45,8 +45,9 @@
 
     </LinearLayout>
 
+
+
         <com.airbnb.lottie.LottieAnimationView
-            android:layout_centerInParent="true"
             android:id="@+id/animationView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -55,6 +56,7 @@
             app:lottie_rawRes="@raw/loading_orange"
             app:lottie_autoPlay="true"
             android:visibility="gone"
+            android:background="@color/transparentDark"
             app:lottie_loop="true"/>
-    </RelativeLayout>
+    </FrameLayout>
 </ScrollView>
