--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -26,6 +26,7 @@
 
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
+        <item name="android:colorPrimary" >@color/white</item>
         <item name="android:windowLightStatusBar" >true</item>
     </style>
 
