--- a/app/src/main/res/layout/back_layout.xml
+++ b/app/src/main/res/layout/back_layout.xml
@@ -12,27 +12,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
-            android:background="?attr/colorPrimary">
+            android:background="@color/white">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-                <ImageView
-                    android:id="@+id/toggle"
-                    android:layout_width="0dp"
-                    android:layout_height="40dp"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_weight=".5"
-                    android:src="@drawable/baseline_menu_24"/>
+<!--                <ImageView-->
+<!--                    android:id="@+id/toggle"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="40dp"-->
+<!--                    android:clickable="true"-->
+<!--                    android:focusable="true"-->
+<!--                    android:layout_weight=".5"-->
+<!--                    android:src="@drawable/baseline_menu_24"/>-->
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="4"
                     android:layout_height="wrap_content"
                     android:text="Restoran"
                     android:layout_marginStart="5dp"
-                    android:textColor="@color/white"
+                    android:textColor="@color/black"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
             </LinearLayout>
@@ -68,6 +68,7 @@
                     android:layout_height="wrap_content"
                     android:text="Enjoy our delicious meal"
                     android:textSize="28dp"
+                    android:textAlignment="center"
                     android:textColor="@color/white"
                     android:textStyle="bold|italic"
                     android:layout_marginTop="20dp"
