--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -2,9 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="?attr/colorPrimary"
+    android:background="@color/white"
     android:gravity="bottom"
     android:padding="20dp"
+    android:elevation="30dp"
     android:layout_height="230dp">
 
     <ImageView
@@ -17,7 +18,7 @@
         android:text="Qasimali@gmail.com"
         android:layout_marginTop="10dp"
         android:textStyle="bold"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:textSize="20sp"/>
 
 </LinearLayout>
