--- a/app/src/main/res/layout/activity_team.xml
+++ b/app/src/main/res/layout/activity_team.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/about_three"
     tools:context=".TeamActivity">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:background="@color/transparentDark"
         android:gravity="center_horizontal">
 
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="250dp"
             android:src="@drawable/about_three"
+            android:visibility="gone"
             android:scaleType="centerCrop"/>
 
         <TextView
-            android:text="Our Master Chefs"
+            android:text="---- Our Master Chefs ----"
             android:textColor="@color/orange"
             android:textSize="30dp"
             android:padding="10dp"
@@ -82,4 +89,5 @@
 
     </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+</LinearLayout>
