--- a/app/src/main/res/layout/back_layout.xml
+++ b/app/src/main/res/layout/back_layout.xml
@@ -12,27 +12,27 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/toolbar"
-            android:background="@color/white">
+            android:background="@color/orange">
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
-<!--                <ImageView-->
-<!--                    android:id="@+id/toggle"-->
-<!--                    android:layout_width="0dp"-->
-<!--                    android:layout_height="40dp"-->
-<!--                    android:clickable="true"-->
-<!--                    android:focusable="true"-->
-<!--                    android:layout_weight=".5"-->
-<!--                    android:src="@drawable/baseline_menu_24"/>-->
+                <ImageView
+                    android:id="@+id/toggle"
+                    android:layout_width="0dp"
+                    android:layout_height="match_parent"
+                    android:clickable="true"
+                    android:focusable="true"
+                    android:layout_weight=".5"
+                    android:src="@drawable/baseline_menu_24"/>
                 <TextView
                     android:layout_width="0dp"
-                    android:layout_weight="4"
+                    android:layout_weight="5"
                     android:layout_height="wrap_content"
                     android:text="Restoran"
                     android:layout_marginStart="5dp"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
             </LinearLayout>
@@ -40,12 +40,17 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ScrollView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/lighGray"
             android:orientation="vertical">
             <FrameLayout
             android:layout_width="match_parent"
@@ -59,8 +64,9 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:gravity="center_horizontal"
+                android:gravity="center"
                 android:padding="20dp"
+                android:background="@color/tran"
                 android:orientation="vertical">
 
                 <TextView
@@ -84,21 +90,13 @@
                     android:textColor="@color/white"/>
                 <ImageView
                     android:id="@+id/ivhero"
+                    android:visibility="gone"
                     android:layout_width="120dp"
                     android:layout_margin="20dp"
                     android:layout_height="120dp"
                     android:src="@drawable/hero"/>
 
-                <Button
-                    android:id="@+id/btable"
-                    style="@style/Widget.MaterialComponents.Button"
-                    android:layout_width="match_parent"
-                    android:layout_height="54dp"
-                    android:layout_margin="20dp"
-                    android:textSize="20dp"
-                    android:textStyle="bold"
-                    android:drawableLeft="@drawable/baseline_assignment_turned_in_24"
-                    android:text="Book a Table" />
+
 
             </LinearLayout>
 
@@ -161,6 +159,22 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </ScrollView>
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
+                android:id="@+id/btable"
+                style="@style/Widget.MaterialComponents.FloatingActionButton"
+                android:backgroundTint="@color/orange"
+                android:layout_width="match_parent"
+                android:layout_height="54dp"
+                android:padding="10dp"
+                android:layout_marginEnd="20dp"
+                android:layout_marginBottom="20dp"
+                android:textStyle="bold"
+                android:layout_gravity="end|bottom"
+                android:src="@drawable/outline_add_task_24"
+                android:text="Book a Table"
+                android:contentDescription="Book a table" />
+        </FrameLayout>
+
 
 
 </LinearLayout>
