--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -2,11 +2,10 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:background="@color/white"
-    android:gravity="bottom"
+    android:gravity="center_vertical"
     android:padding="20dp"
     android:elevation="30dp"
-    android:layout_height="230dp">
+    android:layout_height="200dp">
 
     <ImageView
         android:layout_width="80dp"
