--- a/app/src/main/res/layout/fragment_sgin_up.xml
+++ b/app/src/main/res/layout/fragment_sgin_up.xml
@@ -2,12 +2,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="350dp"
+    android:layout_height="450dp"
     android:orientation="vertical"
     android:padding="10dp"
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragements.SginUpFragment">
+
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/profile_image"
+        android:layout_width="96dp"
+        android:layout_height="96dp"
+        android:clickable="true"
+        android:focusable="true"
+        android:src="@drawable/profile"/>
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
