--- a/app/src/main/res/layout/activity_login_register.xml
+++ b/app/src/main/res/layout/activity_login_register.xml
@@ -33,14 +33,15 @@
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tabLayout"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        style="@style/Widget.Design.TabLayout"
+        style="@style/Widget.Material3.TabLayout.Secondary"
+        android:background="@color/white"
         app:tabTextColor="@color/orangeDark"
         tools:ignore="SpeakableTextPresentCheck"/>
     <androidx.viewpager.widget.ViewPager
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="450dp"
         android:id="@+id/viewpager" />
 
     </LinearLayout>
