--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -22,9 +22,7 @@
         android:id="@+id/mainPimg"
         android:layout_width="96dp"
         android:layout_height="96dp"
-        android:src="@drawable/profile"
-        app:civ_border_width="1dp"
-        app:civ_border_color="@color/black"/>
+        android:src="@drawable/profile"/>
 
     <TextView
         android:id="@+id/tvUname"
