--- a/app/src/main/res/drawable/bg_ripple_yellow.xml
+++ b/app/src/main/res/drawable/bg_ripple_yellow.xml
@@ -2,17 +2,20 @@
 <ripple xmlns:android="http://schemas.android.com/apk/res/android" android:color="@color/lighOrange">
     <item android:id="@android:id/mask">
         <shape android:shape="rectangle">
+            <corners android:radius="50dp"/>
             <solid android:color="@color/lighOrange"/>
         </shape>
     </item>
     <item android:id="@android:id/background">
         <shape android:shape="rectangle">
+            <corners android:radius="50dp"/>
             <solid android:color="@color/lighOrange"/>
         </shape>
     </item>
 
     <item>
         <shape android:shape="rectangle">
+            <corners android:radius="50dp"/>
             <solid android:color="@color/white"/>
         </shape>
     </item>
