--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -10,12 +10,13 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="10dp"
+        android:background="@color/llyellow"
         android:gravity="center_horizontal">
 
         <TextView
-            android:text="Welcome to Restoran"
+            android:text="---- Welcome to Restoran ----"
             android:textColor="@color/orange"
-            android:textSize="30dp"
+            android:textSize="28dp"
             android:textStyle="italic|bold"
             style="@style/cardHtext"/>
         <LinearLayout
@@ -25,6 +26,9 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/aimg1"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="170dp"
@@ -32,6 +36,9 @@
                 android:scaleType="centerCrop"/>
 
             <ImageView
+                android:id="@+id/aimg2"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="120dp"
@@ -49,6 +56,9 @@
             android:layout_height="wrap_content">
 
             <ImageView
+                android:id="@+id/aimg3"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="120dp"
@@ -56,6 +66,9 @@
                 android:scaleType="centerCrop"/>
 
             <ImageView
+                android:id="@+id/aimg4"
+                android:clickable="true"
+                android:focusable="true"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_marginStart="10dp"
@@ -69,7 +82,7 @@
         <TextView
             android:text="@string/aboutTxt"
             android:textSize="20dp"
-            android:padding="14dp"
+            android:padding="22dp"
             android:textAlignment="textStart"
             style="@style/cardBtext"/>
         <LinearLayout
