--- a/app/src/main/res/layout/activity_book_table.xml
+++ b/app/src/main/res/layout/activity_book_table.xml
@@ -1,16 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/sbar"
+    android:orientation="vertical"
     tools:context=".BookTable">
-    <LinearLayout
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/sbar">
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="20dp"
+        android:background="@color/llyellow"
         android:gravity="center_horizontal">
 
         <TextView
@@ -22,7 +32,6 @@
         <TextView
             android:text="\nBook a table online\n"
             android:textSize="20dp"
-            android:layout_gravity="start"
             style="@style/cardHtext"/>
        <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/baseline_person_outline_24"
@@ -75,7 +84,7 @@
 
                <ImageView
                    style="@style/imgLeft"
-                   android:src="@drawable/outline_calendar_month_24"/>
+                   android:src="@drawable/baseline_access_time_24"/>
 
                <TextView
                    android:id="@+id/ettimebt"
@@ -112,36 +121,54 @@
 
 
         </com.google.android.material.textfield.TextInputLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="center"
-            android:paddingBottom="10dp"
-            >
-            <Button
-                android:id="@+id/btnCancel"
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="54dp"
-                android:layout_margin="10dp"
-                android:textAllCaps="true"
-                android:textColor="@color/darkGray"
-                android:backgroundTint="@color/lighGray"
-                android:text="Cancel" />
-            <Button
+
+            <androidx.appcompat.widget.AppCompatButton
                 android:backgroundTint="@color/orange"
                 android:id="@+id/btnsubmit"
-                android:layout_width="0dp"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
                 android:layout_height="54dp"
-                android:layout_margin="5dp"
-                android:textAllCaps="true"
+                android:layout_marginTop="5dp"
+                android:textColor="@color/white"
+                android:textSize="20dp"
                 android:text="Book Now" />
 
-        </LinearLayout>
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/btnCancel"
+            android:layout_width="match_parent"
+            android:layout_height="54dp"
+            android:layout_marginTop="5dp"
+            android:textAllCaps="true"
+            android:textColor="@color/darkGray"
+            android:backgroundTint="@color/lighGray"
+            android:text="Cancel" />
 
 
     </LinearLayout>
 
-</ScrollView>
+        </ScrollView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:clickable="true"
+            android:focusable="true"
+            android:gravity="center"
+            android:visibility="gone"
+            android:id="@+id/lprog">
+
+
+        <com.airbnb.lottie.LottieAnimationView
+            android:id="@+id/animationView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:lottie_rawRes="@raw/loading_orange"
+            app:lottie_autoPlay="true"
+            android:background="@drawable/black_rnd"
+            app:lottie_loop="true"/>
+
+        </LinearLayout>
+
+    </FrameLayout>
+</LinearLayout>
