--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -16,12 +16,13 @@
 
     <TextView
         android:id="@+id/tvHost"
+        android:clickable="true"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/ghLogo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="15dp"
-        android:fontFamily="sans-serif-black"
+        android:fontFamily="@font/montserrat_bold"
         android:text="Restoran"
         android:textColor="@color/orange"
         android:textSize="26dp"
