--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="200dp">
+    android:layout_height="wrap_content">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -30,9 +30,8 @@
         android:layout_height="wrap_content"
         android:text="Qasimali@gmail.com"
         android:layout_marginTop="10dp"
-        android:textStyle="bold|italic"
         android:textColor="@color/black"
-        android:textSize="18sp"/>
+        android:textSize="16sp"/>
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
