--- a/app/src/main/res/layout/fragment_sgin_up.xml
+++ b/app/src/main/res/layout/fragment_sgin_up.xml
@@ -2,12 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="510dp"
     android:orientation="vertical"
-    android:padding="10dp"
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragements.SginUpFragment">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:cardUseCompatPadding="true"
+        app:cardElevation="12dp"
+        app:cardCornerRadius="30dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="15dp"
+            android:orientation="vertical">
+
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profile_image"
@@ -15,6 +27,7 @@
         android:layout_height="96dp"
         android:clickable="true"
         android:focusable="true"
+        android:layout_gravity="center_horizontal"
         android:src="@drawable/profile"/>
 
 
@@ -70,6 +83,9 @@
         android:textSize="18dp"
         android:layout_marginTop="5dp"
         android:text="Create Account" />
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
