--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,15 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="400dp"
-    android:orientation="vertical"
-    android:paddingTop="10dp"
-    android:paddingEnd="10dp"
-    android:paddingStart="10dp"
-    android:gravity="center_horizontal"
+    android:layout_height="460dp"
+    app:cardCornerRadius="30dp"
+    app:cardElevation="12dp"
+    app:cardUseCompatPadding="true"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".Fragements.SigninFragment">
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingEnd="10dp"
+        android:paddingStart="10dp"
+        android:gravity="center_horizontal">
+
 
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
@@ -67,9 +75,22 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Or use Social Media accounts to Login!"
+        android:text="Or use Social Media accounts to Login!\n"
          />
-    <LinearLayout
+
+        <Button
+            style="@style/suppBtn"
+            android:id="@+id/btngoogle"
+
+            android:drawableLeft="@drawable/google"
+            android:text="Sign In with google" />
+
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
+
+<!--
+<LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
@@ -106,4 +127,4 @@
             android:src="@drawable/google" />
     </LinearLayout>
 
-</LinearLayout>
+-->
