--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,4 +1,4 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Base application theme. -->
     <style name="Base.Theme.Restoran" parent="Theme.Material3.Light.NoActionBar">
     <item name="colorPrimary">@color/orange</item>
@@ -6,12 +6,15 @@
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
         <item name="android:windowLightStatusBar" >true</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
     </style>
 
     <style name="main2Theme" parent="Theme.Material3.Light.NoActionBar">
         <item name="android:windowBackground">@color/lighOrange</item>
         <item name="android:statusBarColor" >@color/orange</item>
         <item name="android:colorPrimary" >@color/orange</item>
+        <item name="android:colorPrimaryDark">@color/orange</item>
+        <item name="android:fontFamily">@font/montserrat_medium</item>
 
     </style>
     <style name="mainActivity" parent="Base.Theme.Restoran" >
@@ -27,18 +30,18 @@
         <item name="android:windowLightStatusBar" >true</item>
     </style>
     <style name="aboutActivity" parent="Theme.Material3.Light">
-
         <item name="android:windowBackground">@color/white</item>
         <item name="android:statusBarColor" >@color/white</item>
         <item name="android:colorPrimary" >@color/orange</item>
-
+        <item name="android:fontFamily">@font/montserrat_medium</item>
         <item name="android:windowLightStatusBar" >true</item>
+
     </style>
 
     <color name="orangeDark">#E48800</color>
 
     <style name="cardStyle" >
-        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="cardUseCompatPadding" >true</item>
         <item name="cardCornerRadius" >12dp</item>
@@ -75,12 +78,14 @@
         <item name="android:scaleType" >centerCrop</item>
         <item name="android:layout_marginBottom" >10dp</item>
     </style>
-    <style name="suppBtn" parent="@style/Widget.Material3.Button.OutlinedButton" >
+    <style name="suppBtn" parent="@style/Widget.Material3.Button.ElevatedButton" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">54dp</item>
         <item name="android:textSize" >18sp</item>
-        <item name="android:textColor" >@color/black</item>
-        <item name="android:layout_margin" >10dp</item>
+        <item name="android:elevation" >18dp</item>
+        <item name="android:textColor" >@color/darkGray</item>
+        <item name="android:layout_marginStart" >10dp</item>
+        <item name="android:layout_marginEnd" >10dp</item>
         <item name="android:backgroundTint" >@color/white</item>
     </style>
     <style name="textLayout" >
@@ -90,7 +95,7 @@
         <item name="android:paddingStart">10dp</item>
         <item name="android:paddingEnd">10dp</item>
         <item name="android:paddingTop">5dp</item>
-        <item name="android:gravity">center_vertical</item>
+        <item name="android:gravity">top</item>
     </style>
     <style name="textTxt1" >
         <item name="android:layout_width">0dp</item>
@@ -110,10 +115,12 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
-    <style name="texInLay" parent="@style/Widget.Material3.TextInputLayout.OutlinedBox" >
+    <style name="texInLay" parent="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense" >
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:padding" >5dp</item>
+        <item name="boxStrokeColor">@color/orange</item>
+        <item name="hintTextColor">@color/orange</item>
     </style>
     <style name="imgLeft" >
         <item name="android:layout_width">0dp</item>
@@ -145,6 +152,18 @@
         <item name="android:layout_height">52dp</item>
         <item name="android:background" >@null</item>
     </style>
+
+    <style name="tvdetail">
+            <item name="android:layout_width">wrap_content</item>
+            <item name="android:layout_height">wrap_content</item>
+            <item name="android:textSize" >16dp</item>
+        </style>
+
+    <style name="btnDetail">
+            <item name="android:layout_width">45dp</item>
+            <item name="android:layout_height">45dp</item>
+            <item name="android:layout_marginEnd" >5dp</item>
+        </style>
 
 
 
