--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="lighred">#D0473D</color>
     <color name="llyellow">#FFFFFF</color>
     <color name="Blue">#104BFF</color>
+    <color name="yellow">#FFC61B</color>
 </resources>
 <!--<color name="orange">#F9830D</color>-->
 <!---->
