--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -12,13 +12,28 @@
         android:padding="10dp"
         android:background="@color/llyellow"
         android:gravity="center_horizontal">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:gravity="center_vertical"-->
+<!--            android:orientation="horizontal">-->
+<!--        <ImageView-->
+<!--            android:id="@+id/ivbackAbt"-->
+<!--            android:layout_width="40dp"-->
+<!--            android:layout_height="40dp"-->
+<!--            android:src="@drawable/baseline_arrow_back_ios_24"-->
+<!--            android:clickable="true"-->
+<!--            android:layout_margin="10dp"-->
+<!--            android:focusable="true"/>-->
 
-        <TextView
-            android:text="---- Welcome to Restoran ----"
-            android:textColor="@color/orange"
-            android:textSize="28dp"
-            android:textStyle="italic|bold"
-            style="@style/cardHtext"/>
+<!--        <TextView-->
+<!--            android:text="Welcome to Restoran"-->
+<!--            android:textColor="@color/orange"-->
+<!--            android:textSize="28dp"-->
+<!--            android:textStyle="italic|bold"-->
+<!--            style="@style/cardHtext"/>-->
+
+<!--        </LinearLayout>-->
         <LinearLayout
             android:layout_width="320dp"
             android:layout_marginTop="10dp"
