--- a/app/src/main/res/layout/activity_book_table.xml
+++ b/app/src/main/res/layout/activity_book_table.xml
@@ -6,34 +6,47 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".BookTable">
-    <FrameLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <ScrollView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/sbar">
 
-        <LinearLayout
+
+<!--        <TextView-->
+<!--            android:text="-&#45;&#45;&#45;&#45; Reservation -&#45;&#45;&#45;&#45;"-->
+<!--            android:textColor="@color/orange"-->
+<!--            android:textSize="30dp"-->
+<!--            android:textStyle="italic|bold"-->
+<!--            style="@style/cardHtext"/>-->
+        <TextView
+            android:text="Book a table online\n"
+            android:textSize="16dp"
+            android:layout_gravity="center_horizontal"
+            style="@style/cardHtext"/>
+
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="20dp"
-        android:background="@color/llyellow"
-        android:gravity="center_horizontal">
+        android:id="@+id/sbar">
 
-        <TextView
-            android:text="----- Reservation -----"
-            android:textColor="@color/orange"
-            android:textSize="30dp"
-            android:textStyle="italic|bold"
-            style="@style/cardHtext"/>
-        <TextView
-            android:text="\nBook a table online\n"
-            android:textSize="20dp"
-            style="@style/cardHtext"/>
-       <com.google.android.material.textfield.TextInputLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:padding="5dp"
+            android:background="@color/llyellow"
+            android:gravity="center_horizontal">
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:cardUseCompatPadding="true"
+                app:cardElevation="12dp"
+                app:cardCornerRadius="30dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="15dp"
+                android:orientation="vertical">
+
+
+            <com.google.android.material.textfield.TextInputLayout
            app:startIconDrawable="@drawable/baseline_person_outline_24"
            style="@style/texInLay">
 
@@ -57,11 +70,6 @@
 
 
        </com.google.android.material.textfield.TextInputLayout>
-       <LinearLayout
-           android:layout_width="match_parent"
-           android:layout_height="wrap_content"
-           android:orientation="horizontal"
-           android:gravity="center">
 
            <LinearLayout
                android:id="@+id/laydatebt"
@@ -95,7 +103,7 @@
            </LinearLayout>
 
 
-       </LinearLayout>
+
         <com.google.android.material.textfield.TextInputLayout
             app:startIconDrawable="@drawable/baseline_people_outline_24"
             style="@style/texInLay">
@@ -122,13 +130,14 @@
 
         </com.google.android.material.textfield.TextInputLayout>
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:backgroundTint="@color/orange"
+            <Button
                 android:id="@+id/btnsubmit"
                 android:layout_width="match_parent"
                 android:layout_height="54dp"
                 android:layout_marginTop="5dp"
+                android:backgroundTint="@color/orange"
                 android:textColor="@color/white"
+                style="@style/Widget.MaterialComponents.Button"
                 android:textSize="20dp"
                 android:text="Book Now" />
 
@@ -143,6 +152,8 @@
             android:backgroundTint="@color/lighGray"
             android:text="Cancel" />
 
+            </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
     </LinearLayout>
 
@@ -170,5 +181,5 @@
 
         </LinearLayout>
 
-    </FrameLayout>
+
 </LinearLayout>
