--- a/app/src/main/res/layout/drawer_layout.xml
+++ b/app/src/main/res/layout/drawer_layout.xml
@@ -10,7 +10,7 @@
         android:layout_height="match_parent"
         app:cardUseCompatPadding="true"
         app:cardCornerRadius="12dp"
-        app:cardElevation="12dp">
+        app:cardElevation="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:gravity="center"
@@ -22,16 +22,18 @@
         android:id="@+id/mainPimg"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:clickable="true"
+        android:focusable="true"
         android:src="@drawable/profile"/>
 
     <TextView
         android:id="@+id/tvUname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Qasimali@gmail.com"
+        android:text="user@gmail.com"
         android:layout_marginTop="10dp"
         android:textColor="@color/black"
-        android:textSize="16sp"/>
+        />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
