--- a/app/src/main/res/layout/fragment_sgin_up.xml
+++ b/app/src/main/res/layout/fragment_sgin_up.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="510dp"
+    android:layout_height="460dp"
     android:orientation="vertical"
     android:gravity="center_horizontal"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardUseCompatPadding="true"
-        app:cardElevation="12dp"
-        app:cardCornerRadius="30dp">
+        app:cardElevation="10dp"
+        app:cardCornerRadius="15dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,6 +25,7 @@
         android:id="@+id/profile_image"
         android:layout_width="96dp"
         android:layout_height="96dp"
+        android:layout_marginBottom="12dp"
         android:clickable="true"
         android:focusable="true"
         android:layout_gravity="center_horizontal"
@@ -32,47 +33,32 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        style="@style/Widget.Design.TextInputLayout"
         app:startIconDrawable="@drawable/baseline_email_24"
-        app:expandedHintEnabled="true">
+        style="@style/fragInLay">
         <EditText
+            style="@style/fragEt"
             android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
             android:hint="Email Address"
-            android:padding="5dp"
             android:id="@+id/etemail"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:expandedHintEnabled="true"
-        style="@style/Widget.Design.TextInputLayout"
+        style="@style/fragInLay"
         app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/baseline_lock_open_24">
         <EditText
+            style="@style/fragEt"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
             android:hint="Password"
-            android:padding="5dp"
             android:id="@+id/etpass"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:expandedHintEnabled="true"
-        style="@style/Widget.Design.TextInputLayout"
+        style="@style/fragInLay"
         app:passwordToggleEnabled="true"
         app:startIconDrawable="@drawable/baseline_lock_open_24">
         <EditText
+            style="@style/fragEt"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
             android:hint="Confirm Password"
-            android:padding="5dp"
             android:id="@+id/etpassConfirm"/>
     </com.google.android.material.textfield.TextInputLayout>
     <Button
@@ -81,31 +67,32 @@
         android:layout_width="match_parent"
         android:layout_height="52dp"
         android:textSize="18dp"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="7dp"
+        android:layout_marginBottom="8dp"
         android:text="Create Account" />
 
         </LinearLayout>
     </androidx.cardview.widget.CardView>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:orientation="horizontal">
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:gravity="center"-->
+<!--        android:orientation="horizontal">-->
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Already have an account."
-        />
-    <Button
-        android:id="@+id/btnloginS"
-        style="@style/Widget.Material3.Button.TextButton"
-        android:layout_width="wrap_content"
-        android:layout_height="52dp"
-        android:textSize="18dp"
-        android:text="Sign in?" />
+<!--    <TextView-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Already have an account."-->
+<!--        />-->
+<!--    <Button-->
+<!--        android:id="@+id/btnloginS"-->
+<!--        style="@style/Widget.Material3.Button.TextButton"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="52dp"-->
+<!--        android:textSize="18dp"-->
+<!--        android:text="Sign in?" />-->
 
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
 </LinearLayout>
