--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="460dp"
-    app:cardCornerRadius="30dp"
-    app:cardElevation="12dp"
-    app:cardUseCompatPadding="true"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     tools:context=".Fragements.SigninFragment">
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="460dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="10dp"
+        app:cardUseCompatPadding="true">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,33 +24,22 @@
 
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        style="@style/Widget.Design.TextInputLayout"
-        app:startIconDrawable="@drawable/baseline_email_24"
-        app:hintAnimationEnabled="true">
+        style="@style/fragInLay"
+        app:startIconDrawable="@drawable/baseline_email_24">
         <EditText
+            style="@style/fragEt"
             android:inputType="textEmailAddress"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
             android:hint="Email Address"
-            android:padding="5dp"
             android:id="@+id/etemail1"/>
     </com.google.android.material.textfield.TextInputLayout>
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:expandedHintEnabled="true"
-        style="@style/Widget.Design.TextInputLayout"
+        style="@style/fragInLay"
         app:passwordToggleEnabled="true"
-        app:startIconDrawable="@drawable/baseline_lock_open_24"
-        >
+        app:startIconDrawable="@drawable/baseline_lock_open_24">
         <EditText
+            style="@style/fragEt"
             android:inputType="textPassword"
-            android:layout_width="match_parent"
-            android:layout_height="52dp"
             android:hint="Password"
-            android:padding="5dp"
             android:id="@+id/etpass1"/>
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -81,15 +74,41 @@
         <Button
             style="@style/suppBtn"
             android:id="@+id/btngoogle"
-
             android:drawableLeft="@drawable/google"
             android:text="Sign In with google" />
 
 
     </LinearLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+
+
+</LinearLayout>
 
 <!--
+<LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Don't have an account." />
+
+        <Button
+            android:id="@+id/btnregisterS"
+            style="@style/Widget.Material3.Button.TextButton"
+            android:layout_width="wrap_content"
+            android:layout_height="52dp"
+            android:textSize="18dp"
+            android:text="Sign Up?" />
+
+
+    </LinearLayout>
+
+
 <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
